<?xml version="1.0" encoding="utf-8"?>
<!--Generated by crowdin.net-->
<resources>
	<string name="mpp_app_name">Messenger++</string>
	<string name="mpp_app_short_name">M++</string>
	<string name="mpp_captcha_message">Please enter the code from the image below</string>
	<string name="mpp_captcha_title">Captcha</string>
	<string name="mpp_synchronization_is_already_running">Synchronization is already in progress</string>
	<string name="mpp_chats">Chats</string>
	<string name="mpp_contact">Contact</string>
	<string name="mpp_online_contacts">Online contacts</string>
	<string name="mpp_copy">Copy</string>
	<string name="mpp_quote">Quote</string>
	<string name="mpp_send">Send</string>
	<string name="mpp_attach">Attach</string>
	<string name="mpp_write_message">Write a message</string>
	<string name="mpp_message_copied_to_clipboard">Message copied to clipboard</string>
	<string name="mpp_sync_is_already_running">Synchronization is already running</string>
	<string name="mpp_type_message_hint">Enter message</string>
	<string name="mpp_send">Send</string>
	<string name="mpp_phone">Phone</string>
	<string name="mpp_clear">Clear</string>
	<string name="mpp_male">Male</string>
	<string name="mpp_female">Female</string>
	<string name="mpp_sex">Sex</string>
	<string name="mpp_search">Search</string>
	<string name="mpp_account_add">Add account</string>
	<string name="mpp_contact_add">Add contact</string>
	<string name="mpp_menu_app_exit">Exit</string>
	<string name="mpp_back">Back</string>
	<string name="mpp_save">Save</string>
	<string name="mpp_remove">Remove</string>
	<string name="mpp_edit">Edit</string>
	<string name="mpp_nickname">Nickname</string>
	<string name="mpp_birth_date">Birth date</string>
	<string name="mpp_country">Country</string>
	<string name="mpp_city">City</string>
	<string name="mpp_sync">Synchronize</string>
	<string name="mpp_icon">Icon</string>
	<string name="mpp_user_is_typing">User is typing…</string>
	<string name="mpp_menu_unread_messages_counter">0</string>
	<string name="mpp_menu_toggle_users">Online/Offline</string>
	<string name="mpp_menu_edit">Edit</string>
	<string name="mpp_menu_view">View</string>
	<string name="mpp_account_configuration">Configuration of %1$s</string>
	<string name="mpp_notification_title">Messenger++</string>
	<string name="mpp_notification_text">Click to open the app</string>
	<string name="mpp_private_chat_title">%1$s</string>
	<string name="mpp_public_chat_title">Chat</string>
	<string name="mpp_saving_account_title">Saving…</string>
	<string name="mpp_saving_account_message">Wait a second while app is saving account</string>
	<string name="mpp_removing_account_title">Removing…</string>
	<string name="mpp_removing_account_message">Wait a second while app is removing account</string>
	<string name="mpp_saving_user_title">Saving…</string>
	<string name="mpp_saving_user_message">Wait a second while app is saving user</string>
	<string name="mpp_disable">Disable</string>
	<string name="mpp_disabled">Disabled</string>
	<string name="mpp_enable">Enable</string>
	<string name="mpp_enabled">Enabled</string>
	<string name="mpp_menu_notifications">Notifications</string>
	<string name="mpp_notification_network_problem">No internet connection available: connect to the network and try
		again
	</string>
	<string name="mpp_notification_invalid_response">Server returned invalid response</string>
	<string name="mpp_notification_undefined_error">Some error occurred</string>
	<string name="mpp_notification_account_exception">Account error occurred</string>
	<string name="mpp_notification_account_connection_exception">Some error occurred while connecting to the remote
		server, check internet connection and try again
	</string>
	<string name="mpp_notification_account_unsupported_exception">Account is not defined in the app</string>
	<string name="mpp_dialog_do_not_ask_again">Do not ask again</string>
	<string name="mpp_new_message">New message</string>
	<string name="mpp_chat_participants">Participants</string>
	<string name="mpp_invalid_credentials">Invalid credentials</string>
	<string name="mpp_same_account_configured">Same account is already configured</string>
	<string name="mpp_updating_chat">Updating chat…</string>
	<string name="mpp_updating_contacts">Updating contacts…</string>
	<string name="mpp_preferences_appearance">Appearance settings</string>
	<string name="mpp_preferences_other">Other settings</string>
	<string name="mpp_preferences_show_icon_in_chat_title">Show user icon in chat message</string>
	<string name="mpp_preferences_show_icon_in_chat_summary">If checked user icon will be shown in message bubble in
		chat
	</string>
	<string name="mpp_synchronization_started">Synchronization started</string>
	<string name="mpp_preferences_reload_local_data_title">Reload accounts data</string>
	<string name="mpp_preferences_reload_local_data_summary">Synchronizes local data with server</string>
	<string name="mpp_preferences_start_on_boot_data_title">Start on boot</string>
	<string name="mpp_preferences_start_on_boot_data_summary">If set app will start on boot</string>
	<string name="mpp_yesterday_at">Yesterday at</string>
	<string name="mpp_menu_settings">Settings</string>
	<string name="mpp_menu_accounts">Accounts</string>
	<string name="mpp_preferences_theme_title">Theme</string>
	<string name="mpp_preferences_theme_holo">Holo (Default)</string>
	<string name="mpp_preferences_theme_holo_light_action_bar">Holo (Light Action Bar)</string>
	<string name="mpp_new_contact">New contact</string>
	<string name="mpp_name">Name</string>
	<string name="mpp_default_phone">Default phone</string>
	<string name="mpp_accounts">Accounts</string>
	<string name="mpp_pick_account">Pick account</string>
	<string name="mpp_preferences">Settings</string>
	<string name="mpp_messages">Messages</string>
	<string name="mpp_contacts">Contacts</string>
	<string name="mpp_chat">Chat</string>
	<string name="mpp_pick_contact">Pick contact</string>
	<string name="mpp_pick_contact_to_start_chat">Pick contact to start chat</string>
	<string name="mpp_about_third_party_licenses">Third party licenses</string>
	<string name="mpp_about">About</string>
	<string name="mpp_account_removal_confirmation">Do you really want do delete account?</string>
	<string name="mpp_wizard_welcome">Welcome</string>
	<string name="mpp_wizard_welcome_text">Thank you for choosing Messenger++!\n\nFollow the wizard to setup the app and
		to know about it\'s features.
	</string>
	<string name="mpp_wizard_choose_theme">Choose theme</string>
	<string name="mpp_wizard_add_accounts">Add accounts</string>
	<string name="mpp_wizard_add_accounts_text">Before you can chat you need to configure accounts. You can skip this
		step and setup accounts later.
	</string>
	<string name="mpp_wizard_add_accounts_now">Add accounts now</string>
	<string name="mpp_wizard_final">Almost done!</string>
	<string name="mpp_wizard_final_text">Messenger++ is free and open-source: all the features are free of charge and
		source code can be found on github.
	</string>
	<string name="mpp_wizard_final_ways_to_help">Help the project:
	</string>
	<string name="mpp_wizard_final_translate">Translate</string>
	<string name="mpp_wizard_final_contribute">Contribute to development</string>
	<string name="mpp_turn_on_internet">Turn on internet</string>
	<string name="acl_yes">Yes</string>
	<string name="acl_no">No</string>
	<string name="mpp_wizard_final_become_tester">Become tester</string>
	<string name="mpp_preferences_show_ongoing_notification">Show ongoing notification</string>
	<string name="mpp_attention">Attention</string>
	<string name="mpp_ongoing_notification_alert">Disabling the notification may cause closing the app by OS. We
		recommend always showing the notification and exiting the app via exit button.
	</string>
	<string name="mpp_ok">OK</string>
	<string name="mpp_status">Status</string>
	<string name="mpp_actions">Actions</string>
	<string name="mpp_contact_removal_confirmation">Do you really want to remove contact?</string>
	<string name="mpp_contact_info">Contact info</string>
	<string name="mpp_account_info">Account info</string>
	<string name="mpp_at_time">at</string>
	<plurals name="mpp_unread_messages_count_notification">
		<item quantity="one">There is one unread message</item>
		<item quantity="other">There are %s unread messages</item>
	</plurals>
</resources>
