<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2013 serso aka se.solovyev
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:a="http://schemas.android.com/apk/res/android"
				  a:title="@string/mpp_preferences_other">

	<CheckBoxPreference
			a:key="startOnBoot"
			a:title="@string/mpp_preferences_start_on_boot_data_title"
			a:summary="@string/mpp_preferences_start_on_boot_data_summary"/>

    <CheckBoxPreference
        a:key="isOngoingNotificationEnabled"
        a:title="@string/mpp_preferences_is_ongoing_notification_enabled_title"
        a:summary="@string/mpp_preferences_is_ongoing_notification_enabled_summary"/>

	<Preference
			a:key="reloadData"
			a:title="@string/mpp_preferences_reload_local_data_title"
			a:summary="@string/mpp_preferences_reload_local_data_summary"/>

</PreferenceScreen>