<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2013 serso aka se.solovyev
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:a="http://schemas.android.com/apk/res/android">

	<item
			a:id="@+id/mpp_menu_notifications"
			a:title="@string/mpp_menu_notifications"
			a:icon="?attr/mpp_ab_notification_icon"
			a:showAsAction="always"/>

	<item
			a:id="@+id/mpp_menu_unread_messages_counter"
			a:title="@string/mpp_menu_unread_messages_counter"
			a:icon="?attr/mpp_ab_unread_messages_counter_icon"
			a:showAsAction="always|withText"/>

	<item
			a:id="@+id/mpp_menu_accounts"
			a:title="@string/mpp_menu_accounts"
			a:icon="?attr/mpp_ab_accounts_icon"
			a:showAsAction="never"/>

	<item
			a:id="@+id/mpp_menu_settings"
			a:title="@string/mpp_menu_settings"
			a:icon="?attr/mpp_ab_settings_icon"
			a:showAsAction="never"/>

	<item
			a:id="@+id/mpp_menu_app_exit"
			a:title="@string/mpp_menu_app_exit"
			a:showAsAction="never"/>
</menu>