<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:a="http://schemas.android.com/apk/res/android"
            a:layout_width="match_parent"
            a:layout_height="match_parent">

    <LinearLayout
            style="@style/mpp_fragment">

        <TextView
                a:id="@+id/mpp_fragment_title"
                style="@style/mpp_fragment_title"/>

        <ImageView
                a:id="@+id/mpp_realm_def_icon_imageview"
                style="@style/mpp_fragment_icon"/>

        <LinearLayout
                style="@style/mpp_form_buttons_vertical">

            <Button
                    a:id="@+id/mpp_realm_back_button"
                    a:text="@string/mpp_back"
                    a:visibility="gone"
                    style="@style/mpp_form_button_vertical"/>

            <Button
                    a:id="@+id/mpp_realm_sync_button"
                    a:text="@string/mpp_sync"
                    style="@style/mpp_form_button_vertical"/>

            <Button
                    a:id="@+id/mpp_realm_remove_button"
                    a:text="@string/mpp_remove"
                    style="@style/mpp_form_button_vertical"/>

            <Button
                    a:id="@+id/mpp_realm_edit_button"
                    a:text="@string/mpp_edit"
                    style="@style/mpp_form_button_vertical"/>

            <Button
                    a:id="@+id/mpp_realm_state_button"
                    a:text="@string/mpp_disable"
                    style="@style/mpp_form_button_vertical"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>