<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2013 serso aka se.solovyev
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:a="http://schemas.android.com/apk/res/android"
			a:layout_width="match_parent"
			a:layout_height="match_parent">

	<LinearLayout style="?mpp_fragment">

		<TextView
				a:id="@+id/mpp_fragment_title"
				style="?mpp_fragment_title"/>

		<ImageView
				a:id="@+id/mpp_realm_icon_imageview"
				style="?mpp_fragment_icon"/>

		<LinearLayout style="?mpp_form_buttons">

			<Button
					a:id="@id/mpp_back_button"
					a:text="@string/mpp_back"
					a:visibility="gone"
					style="?mpp_form_button"/>

			<Button
					a:id="@+id/mpp_account_sync_button"
					a:text="@string/mpp_sync"
					style="?mpp_form_button"/>

			<Button
					a:id="@id/mpp_remove_button"
					a:text="@string/mpp_remove"
					style="?mpp_form_button"/>

			<Button
					a:id="@+id/mpp_account_edit_button"
					a:text="@string/mpp_edit"
					style="?mpp_form_button"/>

			<Button
					a:id="@+id/mpp_account_state_button"
					a:text="@string/mpp_disable"
					style="?mpp_form_button"/>

		</LinearLayout>

	</LinearLayout>
</ScrollView>