<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:a="http://schemas.android.com/apk/res/android"
	a:layout_width="match_parent"
	a:layout_height="match_parent">

	<LinearLayout style="?mpp_fragment">

		<TextView
			a:id="@+id/mpp_fragment_title"
			style="?mpp_fragment_title" />

		<CheckBox
			a:id="@+id/mpp_sms_conf_stop_processing_checkbox"
			a:text="Do not put SMS into system inbox"
			style="?mpp_form_checkbox"/>

		<LinearLayout
			a:orientation="horizontal"
			a:layout_width="match_parent"
			a:layout_height="wrap_content">

			<Button
				a:id="@+id/mpp_realm_conf_back_button"
				a:text="@string/mpp_back"
				style="?mpp_form_button" />

			<Button
				a:id="@+id/mpp_realm_conf_remove_button"
				a:visibility="gone"
				a:text="@string/mpp_remove"
				style="?mpp_form_button" />

			<Button
				a:id="@+id/mpp_realm_conf_save_button"
				a:text="@string/mpp_save"
				style="?mpp_form_button" />

		</LinearLayout>

	</LinearLayout>
</ScrollView>